Adicionar pesquisa de Unidades - BASIS-206711

--- a/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
+++ b/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
@@ -57,6 +57,9 @@
                         <p-dropdown [options]="unidades"
                         [optionLabel]="'nome'"
                         [optionValue]="'id'"
+                        [filter]="true"
+                        [resetFilterOnHide]="true"
+                        [showClear]="true"
                         pTooltip="Selecione a unidade de internação.">
                         </p-dropdown>
                     </span>
