--- a/frontend/src/app/pacientes/formulario/paciente-list.component.html
+++ b/frontend/src/app/pacientes/formulario/paciente-list.component.html
@@ -6,7 +6,7 @@
             <div class="p-md-6" style="display: flex; width: 100%;">
                 <span class="p-float-label" style="margin-top: 6px; margin-right: 6px; width: 100%;">
                     <input type="text" pInputText class="ui-inputtext" name="filtro" [(ngModel)]="elasticQuery.value" />
-                    <label>Nome paciente</label>
+                    <label>Nome do paciente</label>
                 </span>
                 <span class="p-float-label" style="margin-top: 6px; margin-right: 6px; width: 100%;">
                     <input type="text" pInputText class="ui-inputtext" name="filtro" [(ngModel)]="elasticQuery.value" />
