--- a/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
+++ b/frontend/src/app/pacientes/formulario/responsavel/paciente-form-responsavel.component.html
@@ -1,7 +1,7 @@
 <div class="p-grid p-fluid" [formGroup]="formGroup">
     <div class="p-col-12 p-grid" formGroupName="responsavel">
-        <div nInputText label="Nome do Responsável" formControlName="nomeDoResponsavel" class="p-md-6 p-sm-12"></div>
-        <div nAutoComplete [service]="grauDeParentescoService" field="valor" formControlName="grauDeParentescoId" label="Grau de Parentesco" class="p-md-6 p-sm-12"></div>
+        <div nInputText label="Nome do Responsável" formControlName="nomeDoResponsavel" class="p-md-6 p-sm-12 p-col-12"></div>
+        <div nAutoComplete [service]="grauDeParentescoService" field="valor" formControlName="grauDeParentescoId" label="Grau de Parentesco" class="p-md-6 p-sm-12 p-col-12"></div>
     </div>
     <paciente-form-telefone [telefones]="formGroup.get('responsavel.telefones')" class="p-md-12"> </paciente-form-telefone>
 </div>
