Corrigir dropdown de origens - BASIS-206709

--- a/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
+++ b/frontend/src/app/exames/components/pesquisar-atendimento/pesquisar-atendimento.component.html
@@ -34,7 +34,7 @@
 
 
                         <p-dropdown label="Pedido para 1° exame ou comparativo" 
-                        [options]="unidadesFuncionais"
+                        [options]="origens"
 
                         [optionLabel]="'nome'"
                         [optionValue]="'id'">
